# grep_rusty

./: Cargo.toml  README.md  example.txt  example2.txt
.github/workflows/: rust.yml
src/: lib.rs  main.rs  search.rs
