[package]
name = "grep_rusty"
authors = ["Konstantin Kozoriz <kkozoriz7@yandex.ru>"]
description = "grep_rusty is a reimplementation of the classic grep utility in Rust."
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.86"
rayon = "1.10.0"
colored = "2.1.0"
regex = "1.10.4"
